--- a/frontend/src/Components/Home/ProductCard.scss
+++ b/frontend/src/Components/Home/ProductCard.scss
@@ -139,7 +139,7 @@ $orangeTextColor: #d47f00;
       text-align: center;
       color: $secondaryTextColor;
       cursor: pointer;
-      font-size: 1rem;
+      font-size: 1.3rem;
       font-weight: 500;
       margin-top: 0.5rem;
       transition: color 0.4s ease-in-out;
@@ -148,6 +148,10 @@ $orangeTextColor: #d47f00;
         color: $orangeTextColor;
       }
     }
+  }
+  .detailsBlock-2-span{
+      text-decoration: none;
+      color: $textColor;
   }
 
   .ratings {
@@ -184,6 +188,9 @@ $orangeTextColor: #d47f00;
     span {
       margin: 0 0.3rem;
       color: $secondaryTextColor;
+    }
+    .price-1{
+      font-weight: 600;
     }
     .price-2 {
       text-decoration: line-through;
@@ -286,3 +293,5 @@ $orangeTextColor: #d47f00;
     }
   }
 }
+
+
